# tokenize_Tarea

./: .gitignore  Cargo.toml  arbol.out  arbol2.out  input.tri  output.tok  readme.md  tree.dot  tree.out  triangle.lalrpop
src/: main.rs  pare.rs  parse.rs  parse2.rs
