[package]
name = "tokenize"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "parse"
path = "src/parse.rs"

[[bin]]
name = "pare"
path = "src/pare.rs"

[[bin]]
name = "token"
path = "src/token.rs"