[package]
name = "tokenize"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.5"
regex = "1.11.0"
clap = "4.5.20"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"





[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "parse"
path = "src/parse.rs"

[[bin]]
name = "parse2"
path = "src/parse2.rs"

[[bin]]
name = "pare"
path = "src/pare.rs"

[[bin]]
name = "pare2"
path = "src/pare2.rs"